// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/LatexInline > error in katex 1`] = `
<div>
  <span
    class="post-body--code inline-tex"
    data-testid="latex-enabled"
  >
    <span
      class="katex-error"
      style="color:#cc0000"
      title="ParseError: KaTeX parse error: Expected '}', got 'EOF' at end of input: e^{i\\\\pi + 1 = 0"
    >
      e^{i\\pi + 1 = 0
    </span>
  </span>
</div>
`;

exports[`components/LatexInline > latex is disabled 1`] = `
<div>
  <span
    class="post-body--code inline-tex"
    data-testid="latex-disabled"
  >
    $e^{i\\pi} + 1 = 0$
  </span>
</div>
`;

exports[`components/LatexInline > should match snapshot 1`] = `
<div>
  <span
    class="post-body--code inline-tex"
    data-testid="latex-disabled"
  >
    $e^{i\\pi} + 1 = 0$
  </span>
</div>
`;
